--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,77 @@
+arrow==1.3.0
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
+asttokens==2.4.1
+attrs==24.2.0
+backcall==0.2.0
+bravado==10.4.1
+bravado-core==6.1.1
+Bybit==0.2.12
+certifi==2024.7.4
+charset-normalizer==3.3.2
+comm==0.2.2
+debugpy==1.8.5
+decorator==5.1.1
 Django==4.2.15
+executing==2.0.1
+fqdn==1.5.1
+idna==3.7
+importlib-metadata==8.4.0
+importlib-resources==6.4.5
+ipykernel==6.29.5
+ipython==8.12.3
+isoduration==20.11.0
+jedi==0.19.1
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-client==8.6.2
+jupyter-core==5.7.2
+matplotlib-inline==0.1.7
+monotonic==1.6
+msgpack==1.1.0
+msgpack-python==0.5.6
+nest-asyncio==1.6.0
 numpy==1.24.4
+packaging==24.1
 pandas==2.0.3
+parso==0.8.4
+pbr==6.0.0
+pexpect==4.9.0
+pickleshare==0.7.5
+pkgutil-resolve-name==1.3.10
+platformdirs==4.2.2
+prompt-toolkit==3.0.47
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.3
+pybit==5.8.0
+pycryptodome==3.20.0
+pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.20.0
+schedule==1.2.2
+simplejson==3.19.3
 six==1.16.0
 sqlparse==0.5.1
+stack-data==0.6.3
+swagger-spec-validator==3.0.4
+testresources==2.0.1
+tornado==6.4.1
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240906
 typing-extensions==4.12.2
 tzdata==2024.1
+uri-template==1.3.0
+urllib3==1.24.2
+wcwidth==0.2.13
+webcolors==24.8.0
+websocket-client==1.8.0
+zipp==3.20.1
